Add eslint and fix issues with files

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:html": "node bin/build-html.js dist",
     "clean": "rimraf dist",
     "compress": "node bin/gzip.js dist",
+    "lint": "eslint app bin config",
     "start": "npm run clean && mkdirp dist && concurrently --kill-others \"npm run watch:css\" \"npm run watch:html\" \"npm run start:browsersync\"",
     "start:browsersync": "browser-sync start --config config/browsersync.js",
     "watch:css": "nodemon --ext css --exec \"npm run build:css\" --watch app/css",
@@ -19,8 +20,9 @@
     "browser-sync": "^2.11.1",
     "concurrently": "^2.0.0",
     "cssnano": "^3.5.2",
-    "eslint": "^2.2.0",
-    "glob": "^7.0.4",
+    "eslint": "^2.13.1",
+    "eslint-config-coffeeandcode": "0.0.3",
+    "glob": "^7.0.5",
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
     "metalsmith-in-place": "^1.4.4",
