--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "bin": "./bin/cli.js",
   "scripts": {
-    "lint": "eslint bin config tests/**",
+    "lint": "eslint bin config lib tests",
     "test": "mocha tests/"
   },
   "author": "Coffee and Code <info@coffeeandcode.com>",
@@ -19,7 +19,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint-config-coffeeandcode": "^0.2.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "ps-tree": "^1.1.0"
   },
   "dependencies": {
     "babel-preset-es2015-rollup": "^1.1.1",
