Add custom handlebars helper example and updated tests to bail unless test:ci cmd

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "bin": "./bin/cli.js",
   "scripts": {
     "lint": "eslint bin config lib tests",
-    "test": "mocha tests/"
+    "test": "mocha tests/ --bail",
+    "test:ci": "mocha tests/"
   },
   "author": "Coffee and Code <info@coffeeandcode.com>",
   "license": "ISC",
