--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": ">=6.0"
   },
-  "bin": "./bin/cli.js",
+  "bin": "./bin/slipcast.js",
   "scripts": {
     "lint": "eslint bin config lib tests",
     "test": "mocha tests/ --bail",
@@ -26,6 +26,7 @@
   "dependencies": {
     "babel-preset-es2015-rollup": "^1.1.1",
     "browser-sync": "^2.11.1",
+    "cross-spawn": "^4.0.0",
     "cssnano": "^3.7.3",
     "foreman": "^1.4.1",
     "glob": "^7.0.5",
