--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slipcast",
-  "version": "0.2.0",
+  "version": "0.3.0-pre",
   "description": "A zero config static website builder you can leave at anytime.",
   "engines": {
     "node": ">=6.0"
