--- a/global-cli/package.json
+++ b/global-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "slipcast-cli",
   "version": "0.1.1",
-  "description": "The global command interface for Slipcast: the zero config static website builder you can leave at anytime.",
+  "description": "The global command interface for Slipcast: the minimal config static website builder you can leave at anytime.",
   "engines": {
     "node": ">=6.0"
   },
