--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "slipcast",
   "version": "0.3.0-pre2",
-  "description": "A zero config static website builder you can leave at anytime.",
+  "description": "A minimal config static website builder you can leave at anytime.",
   "engines": {
     "node": ">=6.0"
   },
