--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "babel-preset-es2015-rollup": "^1.1.1",
     "browser-sync": "^2.11.1",
     "cssnano": "^3.7.3",
+    "es6-promisify": "^4.1.0",
     "foreman": "^1.4.1",
+    "fs-extra": "^0.30.0",
     "glob": "^7.0.5",
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
