--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "concat-stream": "^1.5.2",
     "eslint-config-coffeeandcode": "^0.2.0",
     "mocha": "^3.0.2",
+    "proxyquire": "^1.7.10",
     "ps-tree": "^1.1.0"
   },
   "dependencies": {
