--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slipcast",
-  "version": "0.4.0-rc1",
+  "version": "0.4.0",
   "description": "A minimal config static website builder you can leave at anytime.",
   "engines": {
     "node": ">=6.0"
