--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "bin": "./bin/slipcast.js",
   "scripts": {
-    "lint": "eslint bin config global-cli lib scripts tests",
+    "lint": "eslint --ignore-pattern 'node_modules' .",
     "test": "mocha --bail --require tests/support/testHelper.js 'tests/!(fixtures)/**/*.js'",
     "test:ci": "mocha --require tests/support/testHelper.js 'tests/!(fixtures)/**/*.js'"
   },
@@ -20,7 +20,11 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "concat-stream": "^1.5.2",
-    "eslint-config-coffeeandcode": "^0.2.0",
+    "eslint": "^3.7.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "mocha": "^3.0.2",
     "proxyquire": "^1.7.10",
     "ps-tree": "^1.1.0"
