Alter eslintrc files to better match project; fix remaining lint errors
I reverted some of the changes as we're not using ES6 modules and
some of the ES6 function calls changed scope and broke things.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": "airbnb"
+  "env": {
+    "commonjs": true,
+    "es6": true,
+    "node": true
+  },
+  "extends": "airbnb",
+  "parserOptions": {
+    "sourceType": "script"
+  },
+  "rules": {
+    "no-console": ["error", { "allow": ["error", "log", "warn"] }],
+    "strict": ["error", "safe"]
+  }
 }
