--- a/package.json
+++ b/package.json
@@ -1,57 +1,20 @@
 {
-  "name": "slipcast",
-  "version": "0.4.0",
-  "description": "A minimal config static website builder you can leave at anytime.",
+  "private": true,
+  "license": "ISC",
   "engines": {
     "node": ">=6.0"
   },
-  "bin": "./bin/slipcast.js",
   "scripts": {
-    "lint": "eslint --ignore-pattern 'node_modules' .",
-    "test": "mocha --bail --require tests/support/testHelper.js 'tests/!(fixtures)/**/*.js'",
-    "test:ci": "mocha --require tests/support/testHelper.js 'tests/!(fixtures)/**/*.js'"
-  },
-  "author": "Coffee and Code <info@coffeeandcode.com>",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CoffeeAndCode/slipcast.git"
+    "postinstall": "scripts/postinstall.sh",
+    "lint": "eslint --ignore-pattern 'node_modules' --ignore-pattern 'test/fixtures' .",
+    "test": "scripts/test.sh --bail",
+    "test:ci": "scripts/test.sh"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "concat-stream": "^1.5.2",
     "eslint": "^3.11.0",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1",
-    "mocha": "^3.2.0",
-    "proxyquire": "^1.7.10",
-    "ps-tree": "^1.1.0"
-  },
-  "dependencies": {
-    "babel-plugin-external-helpers": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "browser-sync": "^2.17.6",
-    "cssnano": "^3.8.1",
-    "es6-promisify": "^5.0.0",
-    "foreman": "^2.0.0",
-    "fs-extra": "^1.0.0",
-    "glob": "^7.0.6",
-    "handlebars": "^4.0.6",
-    "metalsmith": "^2.3.0",
-    "metalsmith-in-place": "^1.4.4",
-    "metalsmith-layouts": "^1.6.5",
-    "minimist": "^1.2.0",
-    "node-sass": "^3.13.0",
-    "nodemon": "^1.10.2",
-    "postcss": "^5.2.6",
-    "postcss-cssnext": "^2.7.0",
-    "postcss-import": "^8.0.2",
-    "rollup": "^0.36.4",
-    "rollup-plugin-babel": "^2.6.1",
-    "rollup-plugin-commonjs": "^5.0.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-uglify": "^1.0.1"
+    "eslint-plugin-react": "^6.7.1"
   }
 }
