--- a/packages/slipcast/package.json
+++ b/packages/slipcast/package.json
@@ -23,7 +23,7 @@
     "glob": "^7.0.6",
     "handlebars": "^4.0.6",
     "metalsmith": "^2.3.0",
-    "metalsmith-in-place": "^2.0.1",
+    "metalsmith-in-place": "1.4.4",
     "metalsmith-layouts": "^1.6.5",
     "minimist": "^1.2.0",
     "node-sass": "^4.4.0",
