--- a/packages/slipcast-cli/package.json
+++ b/packages/slipcast-cli/package.json
@@ -7,7 +7,8 @@
   },
   "bin": "./index.js",
   "files": [
-    "lib/"
+    "lib/",
+    "index.js"
   ],
   "author": "Coffee and Code <info@coffeeandcode.com>",
   "license": "ISC",
